# nodeflowlite

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  bootstrap.py  docker-compose.yml  pyproject.toml
docs/: CHANGELOG.md  architectural-choices.md  architecture.md  dependency-source-dev-vs-user.md  installing-a-user-project.md  operations-manual.md  startup-and-execution.md  state-history.md
docs/uml/: README.md
e2e_tests/Test_[AP-18]/: istruzioni-test.md
e2e_tests/ap14_probe/: PlatformManager.py  README.md  ap14_curls.sh
e2e_tests/ap14_probe/agents/: CounterProbe.py  __init__.py
e2e_tests/ap14_probe/graphs/: HistoryProbe.yaml
e2e_tests/ap14_probe/routers/: LoopRouter.py  __init__.py
e2e_tests/simple_test/: .env.example  PlatformManager.py  README.md  init_project.py
e2e_tests/simple_test/agents/: BasicWorker.py  CounterNode.py  HookedWorker.py  JudgeAgent.py  ShapingWorker.py  __init__.py
e2e_tests/simple_test/graphs/: MyGraph.yaml
e2e_tests/simple_test/routers/: QualityRouter.py  __init__.py
e2e_tests/simple_test/tools/: __init__.py
e2e_tests/user1/: .env.example  PlatformManager.py
e2e_tests/user1/agents/: AIExtractor.py  AIFormatter.py  AttemptsCounterNode.py  JudgeAgent.py  LoopManager.py  ResilientWorkerAgent.py  SheetReader.py  SheetWriter.py  TavilyExtract.py  WorkerAgent.py
e2e_tests/user1/graphs/: AssistantGraph.yaml  ElaborateResidualDentists.yaml
e2e_tests/user1/routers/: AIResultCheckRouter.py  ExtractionExistRouter.py  (+2 more)
examples/assistant/: PlatformManager.py  README.md  run_assistant_graph.py  run_worker_graph.py
(+68 files in other folders)
