[project]
name = "agent-platform"
version = "0.1.0"
description = "Agentic platform based on LangGraph with declarative graphs in YAML"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # LangChain / LangGraph (agent execution)
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pyyaml>=6.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_platform"]
